vlib/v/checker/tests/deprecations.out
vlib/v/checker/tests/deprecations.vv:55:2: notice: function `future` will be deprecated after 3000-12-30, and will become an error after 3001-06-28; custom message 4
   53 |
   54 | fn main() {
   55 |     future()
      |     ~~~~~~~~
   56 |     past()
   57 |     simply_deprecated()
vlib/v/checker/tests/deprecations.vv:62:4: notice: method `Abc.future` will be deprecated after 3000-11-01, and will become an error after 3001-04-30; custom message 1
   60 |     //
   61 |     a := Abc{}
   62 |     a.future()
      |       ~~~~~~~~
   63 |     a.past()
   64 |     a.simply_deprecated()
vlib/v/checker/tests/deprecations.vv:57:2: warning: function `simply_deprecated` has been deprecated; custom message 7
   55 |     future()
   56 |     past()
   57 |     simply_deprecated()
      |     ~~~~~~~~~~~~~~~~~~~
   58 |     just_deprecated()
   59 |     ancient()
vlib/v/checker/tests/deprecations.vv:58:2: warning: function `just_deprecated` has been deprecated
   56 |     past()
   57 |     simply_deprecated()
   58 |     just_deprecated()
      |     ~~~~~~~~~~~~~~~~~
   59 |     ancient()
   60 |     //
vlib/v/checker/tests/deprecations.vv:64:4: warning: method `Abc.simply_deprecated` has been deprecated; custom message 3
   62 |     a.future()
   63 |     a.past()
   64 |     a.simply_deprecated()
      |       ~~~~~~~~~~~~~~~~~~~
   65 | }
vlib/v/checker/tests/deprecations.vv:56:2: error: function `past` has been deprecated since 2021-03-01; custom message 5
   54 | fn main() {
   55 |     future()
   56 |     past()
      |     ~~~~~~
   57 |     simply_deprecated()
   58 |     just_deprecated()
vlib/v/checker/tests/deprecations.vv:59:2: error: function `ancient` has been deprecated since 1990-03-01; custom message 6
   57 |     simply_deprecated()
   58 |     just_deprecated()
   59 |     ancient()
      |     ~~~~~~~~~
   60 |     //
   61 |     a := Abc{}
vlib/v/checker/tests/deprecations.vv:63:4: error: method `Abc.past` has been deprecated since 2021-03-01; custom message 2
   61 |     a := Abc{}
   62 |     a.future()
   63 |     a.past()
      |       ~~~~~~
   64 |     a.simply_deprecated()
   65 | }
